[package]
name = "lm"
version = "0.1.0"
edition = "2021"
default-run = "generate"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
rust_tokenizers = "8.0.0"
tch = "0.10.0"
plotpy = "0.3.5"
russell_lab = "0.4.1"
plotters = "0.3.4"
